# condor-view_desarrollo-territorial

./: .gitignore  README.md  condor-view-mvp-specs.md
backend/: __init__.py  main.py  pyproject.toml
backend/diagnosis/: __init__.py  aptitude.py  diagnose.py  norm_retriever.py  report_composer.py  rules_engine.py  schema.py  validator.py
backend/diagnosis/checks/: __init__.py  duros.py  fisicos.py  indicadores.py
backend/diagnosis/tests/: test_diagnose.py
backend/extraction/: __init__.py  arcgis.py  config.py  extract.py  normalize.py  overpass.py  schema.py  terrain.py
backend/procedural/: __init__.py  block_subdivider.py  generate.py  green_allocator.py  mass_generator.py  metrics.py  restrictions.py  scene_exporter.py  schema.py  street_generator.py
backend/procedural/tests/: test_mass.py
docs/: fuentes-datos.md  pedido-ugdt-indicadores.md  relevamiento-herramientas.md
frontend/: package-lock.json
pipeline/: 01_zonas.py  02_normativa.py  03_fisico.py  04_accesibilidad.py  05_scoring.py  06_export.py  07_servicios.py  08_isocronas.py  Dockerfile  README.md  config.yaml  docker-compose.yml  generate_zones.py  pyproject.toml  requirements.txt  run_pipeline.sh
pipeline/00_descarga/: dem.py  indec.py  osm.py
pipeline/config/: sources.yaml  zonas.yaml
pipeline/data/: .gitignore
pipeline/lib/: __init__.py  arcgis_client.py  normativa_parser.py  normativa_resolver.py
pipeline/tests/: test_normativa_parser.py
spec/: condor-view-spec-capa1-extraccion.md  condor-view-spec-capa2-generacion-3d.md  condor-view-spec-capa3-agente-diagnostico.md  data.md  (+4 more)
(+31 files in other folders)
