[project]
name = "condor-view-backend"
version = "0.1.0"
description = "Backend de extracción on-demand (CAPA 1) — PolygonContext"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    # Geo (compartidas con el pipeline)
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.6",
    "rasterio>=1.3",
    "osmnx>=1.9",
    "pyyaml>=6.0",
]
