[project]
name = "condor-view-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "geopandas>=0.14",
    "shapely>=2.0",
    "numpy>=1.24",
    "pyproj>=3.6",
    "pyyaml>=6.0",
    "rasterio>=1.3",
    "rasterstats>=0.19",
    "osmnx>=1.9",
    "elevation>=1.1",
    "pyarrow>=14.0",
    "scikit-learn>=1.3",
]
